--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
             <artifactId>jline</artifactId>
             <version>3.25.0</version>
         </dependency>
+
+        <!-- Gson for JSON formatting -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <build>
